--- a/index.html
+++ b/index.html
@@ -152,9 +152,10 @@ class: center, middle, inverse
 * ReactJS
     * Principes
     * Composants
-    * Etats (data)
+    * Etats
     * Redux
     * Tests
+    * Optimisations
 ---
 
 class: center, middle, inverse
