set new state from prev state

--- a/index.html
+++ b/index.html
@@ -417,6 +417,7 @@ this.state = {...}
 * Définir un nouvel état
 ```javascript
 this.setState({...})
+this.setState(prevState => {...})
 ```
 * Récupérer l'état courant
 ```javascript
