--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Formation React js, avec ES6"/>
     <meta name="keywords"
           content="formation react, formation reactjs, freelance, flux, redux, es6, props, state, jsx"/>
-    <link rel="canonical" href="http://codox.fr/reactjs-formation"/>
+    <link rel="canonical" href="http://codox.fr/formation-reactjs-es6"/>
     <a href="https://google.com/+JeanBaptisteCazaux" rel="publisher"/>
 
     <style>
