--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>React avec javascript et ES6</title>
+    <title>React avec ES6</title>
     <META NAME="ROBOTS" CONTENT="INDEX, FOLLOW">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="description" content="Formation React js, avec ES6"/>
