--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ ReactDOM.render(
 );
 
 ```
-hello.js
+Hello.js
 ```javascript
 import React from "react";
 
@@ -390,7 +390,7 @@ class Hello extends React.Component {
 
 Hello.propTypes = {
     name: React.PropTypes.string.isRequired,
-    truc: React.PropTypes.boolean
+    truc: React.PropTypes.bool
 }
 ```
 Au choix: array, bool, func, number, object, string, symbol, node, instanceOf(MyObject),
