remove typescript from slides

--- a/index.html
+++ b/index.html
@@ -984,13 +984,11 @@ layout: false
 1. Installer les packages redux et react-redux
 2. Reprendre le TP-02 mais en utilisant le *state* du store plutot que le *state* du composant,
 et en initialisant la liste sans chargement asynchrone (liste en dur).
- * Créer l'interface **State** du *state* du *store* (la liste d'items)
- * Creer une interface **ItemsAction**
  * Créer un *action creator* **setItems** qui renvoie une **ItemAction**
  * Créer un reducer **items** qui prend une **ItemAction** en entrée
  * Créer un reducer global à l'aide de **combineReducer**
  * Créer le *contener* et le *presentational component*
- * Passer un titre dans les ownProps (et donc créer l'interface **OwnProps**)
+ * Passer un titre dans les ownProps
 3. Bonus: Créer un bouton qui permet d'ajouter des items au store.
 
 ---
