--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@ const ShoppingListInternal = ({title, items}) => (
         <h2>{title}</h2>
         <ul>
             {
-                items.map(item => <ShoppingItem key={item.id} item={item} />)
+                items.map(item => <ShoppingItem key={item.id} item={item}/>)
             }
         </ul>
     </div>
@@ -606,7 +606,7 @@ render() {
 	const mystyle = {
 		backgroundColor: '#F0ABCD'
 	}
-	return <div style={mystyle} />
+	return <div style={mystyle}/>
 }
 ```
 Sinon une CSS globale, ou une CSS par composant (Webpack powered)
@@ -1071,7 +1071,7 @@ export const fetchItems = () =>
         .then(items => {
             dispatch(setItems(items));
         })
-        .catch((error: any) => {
+        .catch((error) => {
             console.log(error);
         });
 ```
@@ -1089,7 +1089,7 @@ layout: false
 
 # Bravo !
 * C'était la partie la plus compliquée
-* On sait créer des compostants et leur passer des propriétés
+* On sait créer des composants et leur passer des propriétés
  * Depuis leur composant parent
  * Depuis depuis un l'état 'local' (**LocalState**)
  * Depuis l'état du **store** (**State**)
@@ -1188,7 +1188,7 @@ import {shallow} from "enzyme";
 
 describe(MyComponent, () => {
     it('should work !', () => {
-        const component = shallow(<MyComponent />);
+        const component = shallow(<MyComponent/>);
     });
 });
 ```
@@ -1201,7 +1201,7 @@ Vérifier que le composant s'affiche avec ses sous composants
 describe(MyComponent, () => {
     it('renders MyComponent and its sub components', () => {
         const component = shallow(
-            <MyComponent />
+            <MyComponent/>
         );
         expect(component.find(SubComponent1).exists()).toBeTruthy();
         expect(component.find(SubComponent2).exists()).toBeTruthy();
@@ -1242,12 +1242,77 @@ layout: false
 #TP-07
 ## Les tests
 Le but est de tester complètement le TP-03
-1. Créer un fichier .test.js par composant
-2. *StudentDetails*: Vérifier le texte pour les 2 cas (Student.NULL ou non)
-3. *Filter*: Vérifier que le callback est appelé lors d'un événement *change*
-4. *StudenstTable*: Vérifier le nombre de ligne du tableau suivant le nombre de *Student* passés. Vérifier également le callback.
-5. *StudentsApp*: Vérifier que le composant et ses sous composants sont affichés, puis vérifier l'impact des méthodes *handleSelectStudent()* et
+1. Installer enzyme et react-addons-test-utils (--save-dev)
+2. Créer un fichier .test.js par composant
+3. *StudentDetails*: Vérifier le texte pour les 2 cas (Student.NULL ou non)
+4. *Filter*: Vérifier que le callback est appelé lors d'un événement *change*
+5. *StudenstTable*: Vérifier le nombre de ligne du tableau suivant le nombre de *Student* passés. Vérifier également le callback.
+6. *StudentsApp*: Vérifier que le composant et ses sous composants sont affichés, puis vérifier l'impact des méthodes *handleSelectStudent()* et
 *handleFilterChange()* sur le *state*. Enfin valider que *filteredStudents()* renvoie les bons éléments pour un filtre donné.
+
+---
+template: default
+layout: true
+
+### Router
+---
+
+## react-router
+
+Il existe plusieurs systèmes de gestion de l'historique de navigation:
+* createMemoryHistory : /
+* hashHistory: /monsite/#/page1
+* browserHistory : /monsite/page1
+
+Pour la dernière il faut modifier le serveur pour rediriger toutes les requêtes vers index.html, sauf les css, js, et appels aux webservices.
+
+---
+
+## react-router
+
+Définir le Router au plus haut niveau dans l'application.
+
+```javascript
+ReactDOM.render(
+    <Router history={hashHistory}>
+        <Route path="/" component={App}/>
+        <Route path="/part1" component={Part1}/>
+        <Route path="/part2" component={Part2}/>
+    </Router>,
+    document.getElementById('root')
+);
+```
+On peut imbriquer les routes !
+```javascript
+ReactDOM.render(
+    <Router history={hashHistory}>
+        <Route path="/" component={App}>
+            <Route path="/part1" component={Part1}/>
+            <Route path="/part2" component={Part2}/>
+        </Route>
+    </Router>,
+    document.getElementById('root')
+);
+```
+
+---
+
+## react-router
+
+On peut générer des liens automatiquement (voir la doc pour les propriétés)
+```javascript
+<Link to="/part1">Partie 1</Link>
+```
+
+---
+layout: false
+
+#TP-08
+## React-router
+Le but est de créer une application avec les routes /part1 et /part2. Une zone commune (App) persiste.
+1. Installer react-router
+2. Utiliser react-router dans l'index.js
+3. react-router-redux ?
 
 ---
 template: default
