--- a/index.html
+++ b/index.html
@@ -598,6 +598,12 @@ layout: true
 ### Tips
 
 ---
+# Caractères spéciaux
+```javascript
+<span> Jet d{String.fromCharCode(39)}eau</span>
+```
+
+---
 
 # JSX if (else)
 if
