--- a/index.html
+++ b/index.html
@@ -180,107 +180,342 @@ layout: true
 
 ---
 
-# Quelques nouveautés
-* es6, es2015, ...
-* Pas totalement supporté par les navigateurs : [Tableau de compatibilité](http://www.webbrowsercompatibility.com/es6/desktop/)
-    * Transpiler
-    * Shim
-* ~~var~~, let, const
+# ~~var~~, let, const
+
 ```javascript
-    let foo = 'bar';
-    const MAX = 10;
+let foo = 'bar';
+const MAX = 10;
+const ttc = addTva(15);
 ```
-* Arrow functions
-```javascript
-    let add = (a, b) => {
-        return a + b;
-    }
-    let add = (a, b) => a + b
-```
+
+**let** vs. **const** ?
 ---
 
-# Quelques nouveautés
+# ~~var~~, let, const
+```javascript
+let foo = 'bar';
+const MAX = 10;
+const ttc = addTva(15);
+```
 
-* Spread operator
-```javascript
-    let tab = [1, 2, 3];
-    let arr = [0]
-    arr.push(...tab);
-```
-* Destructuring
-```javascript
-    function imc(user) {
-        return user.poids / (user.taille * user.taille);
-    }
+**let** vs. **const** ?
 
-    function imc({poids, taille}) {
-        return poids / (taille * taille);
-    }
-    let user = {poids: 100, taille: 1.50, age: 45};
-    imc(user);
-```
-```javascript
-    const foo = {a: 1, b: 2, c: 'bar'};
-    let {a} = foo;
-    console.log(a); // ??
-```
+0 **var**, 44 **let**, 997 **const**
 
 ---
 
-# Quelques nouveautés
+# ~~var~~, let, const
 
-* Shorthand Notation
 ```javascript
-    let longer = {
-        foo: foo,
-        bar: bar
-    }
-    let shorter = {
-        foo,
-        bar
-    }
+if (true) {
+    var i = 1;
+} else {
+    var j = 2;
+}
+console.log(i, j);
 ```
+---
+
+# ~~var~~, let, const
+
+```javascript
+const user = {};
+user.name = 'john'; // (1)
+user = {name: 'lea'}; // (2)
+```
+```javascript
+const arr = ['a'];
+arr.push('b'); // (3)
+arr = ['a', 'b']; // (4)
+```
+---
+
+# Arrow functions
+
+```javascript
+function addOldSchool(a, b) {
+    return a + b;
+}
+```
+---
+
+# Arrow functions
+
+```javascript
+function addOldSchool(a, b) {
+    return a + b;
+}
+
+let add = (a, b) => {
+    return a + b;
+}
+```
+---
+
+# Arrow functions
+
+```javascript
+function addOldSchool(a, b) {
+    return a + b;
+}
+
+let add = (a, b) => {
+    return a + b;
+}
+
+add = (a, b) => a + b
+```
+---
+
+# Arrow functions
+
+```javascript
+const squares = [0, 1, 2, 3, 4].map(x => x * x);
+console.log(squares);
+```
+---
+
+# Attention !
+
+Pas totalement supporté par les navigateurs : [Tableau de compatibilité](http://www.webbrowsercompatibility.com/es6/desktop/)
+* Shim (Array.map(), Array.reduce(), ...)
+* Transpiler (=>, let, const, ...)
+---
+
+# Spread operator
+
+```javascript
+const odd = [1, 3, 5, 7, 9];
+const even = [2, 4, 6, 8]
+const all = [0];
+
+// arr.push([element1[, ...[, elementN]]])
+all.push(odd);
+all.push(even);
+
+console.log(all) // ?
+```
+---
+
+# Spread operator
+
+```javascript
+const odd = [1, 3, 5, 7, 9];
+const even = [2, 4, 6, 8]
+const all = [0];
+
+// arr.push([element1[, ...[, elementN]]])
+for (let i = 0; i < odd.length; i++) {
+    all.push(odd[i]);
+}
+for (let i = 0; i < even.length; i++) {
+    all.push(even[i]);
+}
+console.log(all) // ?
+```
+---
+# Spread operator
+
+```javascript
+const odd = [1, 3, 5, 7, 9];
+const even = [2, 4, 6, 8]
+const all = [0];
+
+// arr.push([element1[, ...[, elementN]]])
+all.push(...odd);
+all.push(...even);
+
+console.log(all) // ?
+```
+---
+# Destructuring
+
+```javascript
+const foo = {a: 1, b: 2, c: 'bar'};
+let {a} = foo;
+console.log(a); // ?
+```
+---
+# Destructuring
+
+```javascript
+const user = {
+    firstname: 'john',
+    nickname: 'ninja',
+    lastname: 'doe',
+    age: 21
+};
+
+function getUserName(user) {
+    return user.firstname.concat(' ').concat(user.lastname);
+}
+console.log(getUserName(user));
+```
+---
+# Destructuring
+
+```javascript
+const user = {
+    firstname: 'john',
+    nickname: 'ninja',
+    lastname: 'doe',
+    age: 21
+};
+
+function getUserName(user) {
+    return user.firstname.concat(' ').concat(user.lastname);
+}
+
+function getUserName({firstname, lastname}) {
+    return firstname.concat(' ').concat(lastname);
+}
+console.log(getUserName(user));
+```
+---
+# Destructuring
+
+```javascript
+const user = {
+    firstname: 'john',
+    nickname: 'ninja',
+    lastname: 'doe',
+    age: 21
+};
+
+function getUserName(user) {
+    return user.firstname.concat(' ').concat(user.lastname);
+}
+
+function getUserName({firstname, lastname}) {
+    return firstname.concat(' ').concat(lastname);
+}
+
+const getUserName = ({firstname, lastname}) =>
+    firstname.concat(' ').concat(lastname);
+
+console.log(getUserName(user));
+```
+---
+# Shorthand Notation
+```javascript
+const foo = 42;
+const bar = 1;
+
+const longer = {
+    foo: foo,
+    bar: bar
+}
+```
+---
+# Shorthand Notation
+```javascript
+const foo = 42;
+const bar = 1;
+
+const longer = {
+    foo: foo,
+    bar: bar
+}
+
+const shorter = {
+    foo,
+    bar
+}
+```
+
+---
+
+# Bonus
 
 * Object.assign
 ```javascript
-    Object.assign({}, {a: 1, c: 3}, {a: 10, b: 2}) // = ?
+Object.assign({}, {a: 1, c: 3}, {a: 10, b: 2}); // = ?
 ```
 
 * Map
 ```javascript
-    let m = new Map();
-    m.set('foo', 2);
-    const bar = m.has('foo') ? m.get('foo') : 0;
+const m = new Map();
+m.set('foo', 2);
+const bar = m.has('foo') ? m.get('foo') : 0;
 ```
 
 * Set
 ```javascript
-    let uniq = new Set(1, 2, 3, 1, 2, 3);
-    uniq.length // ?
+const uniq = new Set([1, 2, 3, 1, 2, 3]);
+uniq.length // ?
 ```
 ---
-
 # Rappels
 
 * currying
+
 ```javascript
-    let add = function(x) {
-        return function(y) {
-            return x+y
-        }
+let add = function(x) {
+    return function(y) {
+        return x + y
     }
-    let add2 = add(2); add2(3); // = ?
-    add(2)(3) // ???
-    let add = x => y => x + y // WTF ?!
+}
+add(2)(3) // ???
 ```
-* this
+---
+# Rappels
+
+* currying
+
 ```javascript
-    function f() {
-        this.foo; // what is this ?
+let add = function(x) {
+    return function(y) {
+        return x + y
     }
+}
+add(2)(3) // 5 !
+
+const add2 = add(2);
+add2(3); // = ?
 ```
 
 ---
+# Rappels
+
+* currying
+
+```javascript
+let add = function(x) {
+    return function(y) {
+        return x + y
+    }
+}
+let add = x => y => x + y // WTF ?!
+```
+---
+# Rappels
+
+* currying
+
+```javascript
+let add = function(x) {
+    return function(y) {
+        return x + y
+    }
+}
+let add = x => y => x + y // WTF ?!
+
+let add = x =>
+    y => (x + y);
+// easy !
+```
+
+---
+# Rappels
+
+* this
+```javascript
+function f() {
+    this.foo; // what is this ?
+}
+```
+---
+
 layout: false
 class: center, middle, inverse
 
